TestCases/Errors/Haversine/observations/sst/aut_12_obs.spm
obs r15-c5 0.000174097975946025
obs r16-c5 5.2875286485863e-05
obs r17-c5 0.000102627257799672
obs r14-c6 0.000716786916078009
obs r15-c6 0.000195426587169718
obs r16-c6 0.00011975959073825
obs r17-c6 6.96306387147078e-05
obs r14-c7 0.000298361601953336
obs r15-c7 0.0001428549300852
obs r16-c7 0.000124797204542618
obs r17-c7 1e-08
obs r14-c8 0.000203707540968236
obs r14-c9 1e-08
obs r9-c10 0.00272727272727273
obs r10-c10 0.00152958152958153
obs r13-c10 0.00487179487179487
obs r14-c10 0.00212467948717949
obs r10-c11 0.000952380952380952
obs r13-c11 0.00269230769230769
obs r12-c18 1e-08
obs r13-c18 0.00777777777777778
obs r10-c19 0.0072962962962963
obs r11-c19 0.00524048215777539
obs r12-c19 0.00166154633896569
error_value r15-c5 0.2
error_value r16-c5 0.2
error_value r17-c5 0.2
error_value r14-c6 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r17-c7 0.2
error_value r14-c8 0.2
error_value r14-c9 0.2
error_value r9-c10 0.2
error_value r10-c10 0.2
error_value r13-c10 0.2
error_value r14-c10 0.2
error_value r10-c11 0.2
error_value r13-c11 0.2
error_value r12-c18 0.2
error_value r13-c18 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r12-c19 0.2
